--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -4,18 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TransactionFragment">
+    tools:context=".TransactionFragment"
+    android:background="@android:color/black">
 
     <!-- TODO: Update blank fragment layout -->
     <EditText
         android:id="@+id/edtemail"
         android:hint="Email Address"
         android:layout_width="300dp"
-        android:layout_height="60dp"
+        android:layout_height="40dp"
+        android:paddingStart="20dp"
+        android:textColor="@android:color/black"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
+        android:background="@drawable/edittext"
         android:layout_marginStart="50dp"
         android:layout_marginTop="150dp"
         android:layout_marginEnd="20dp" />
@@ -23,13 +27,16 @@
     <EditText
         android:id="@+id/edtamount"
         android:hint="Amount"
+        android:paddingStart="20dp"
         android:layout_width="300dp"
-        android:layout_height="60dp"
+        android:layout_height="40dp"
+        android:textColor="@android:color/black"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/edtemail"
+        android:background="@drawable/edittext"
         android:layout_marginStart="50dp"
         android:layout_marginTop="220dp"
         android:layout_marginEnd="20dp" />
@@ -42,5 +49,6 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="300dp"
         android:layout_marginStart="80dp"
+        android:background="@drawable/button2"
         android:text="send" />
 </FrameLayout>
